objects/VisualAntidote__Payment_Field__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal Pro</fullName>
                    <default>true</default>
                    <label>PayPal Pro</label>
                </value>
                <value>
                    <fullName>IATS</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>AuthorizeNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Account</label>
        <referenceTo>VisualAntidote__Payment_Account__c</referenceTo>
        <relationshipLabel>Payment Fields</relationshipLabel>
        <relationshipName>Payment_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__American_Express_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>American Express Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>VisualAntidote__Payment_Currency__c</referenceTo>
        <relationshipLabel>Payment Fields</relationshipLabel>
        <relationshipName>Payment_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Discover_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discover Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Display_Amount_Charged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Amount Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_BCC__c</fullName>
        <label>Failure Email BCC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_Body__c</fullName>
        <label>Failure Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_CC__c</fullName>
        <label>Failure Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_Subject__c</fullName>
        <label>Failure Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_To_Field_ID__c</fullName>
        <label>Failure Email To Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email_To__c</fullName>
        <label>Failure Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Failure_Email__c</fullName>
        <label>Failure Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Field_ID__c</fullName>
        <label>Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Payment Fields</relationshipLabel>
        <relationshipName>Payment_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Payment_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Payment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Amount__c</fullName>
        <defaultValue>&apos;Amount&apos;</defaultValue>
        <label>Label Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_CVV__c</fullName>
        <defaultValue>&apos;CVV&apos;</defaultValue>
        <label>Label CVV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Credit_Card__c</fullName>
        <defaultValue>&apos;Credit Card&apos;</defaultValue>
        <label>Label Credit Card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Expiry__c</fullName>
        <defaultValue>&apos;Expiry&apos;</defaultValue>
        <label>Label Expiry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Recurring_Fee__c</fullName>
        <defaultValue>&quot;Initial Fee&quot;</defaultValue>
        <label>Label Recurring Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Shipping__c</fullName>
        <defaultValue>&apos;Shipping&apos;</defaultValue>
        <label>Label Shipping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Sub_Total_Amount__c</fullName>
        <defaultValue>&quot;Subtotal&quot;</defaultValue>
        <label>Label Sub Total Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Taxes__c</fullName>
        <defaultValue>&apos;Taxes&apos;</defaultValue>
        <label>Label Taxes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Label_Total_Amount__c</fullName>
        <defaultValue>&apos;Total Amount&apos;</defaultValue>
        <label>Label Total Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Mastercard_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mastercard Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_BCC__c</fullName>
        <label>Notification Email BCC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_Body__c</fullName>
        <label>Notification Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_CC__c</fullName>
        <label>Notification Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_From_Name__c</fullName>
        <label>Notification Email From Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_From__c</fullName>
        <label>Notification Email From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_Subject__c</fullName>
        <label>Notification Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_To_Field_ID__c</fullName>
        <label>Notification Email To Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email_To__c</fullName>
        <label>Notification Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Notification_Email__c</fullName>
        <label>Notification Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Provider_Field_Mapping_XML__c</fullName>
        <label>Provider Field Mapping XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Initial_Amount_Formula2__c</fullName>
        <label>Recurring Initial Amount Formula2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Count__c</fullName>
        <label>Recurring Payment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Field_Type__c</fullName>
        <label>Recurring Payment Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Frequency__c</fullName>
        <label>Recurring Payment Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Initial_Amount_Formula__c</fullName>
        <label>Recurring Payment Initial Amount Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Initial_Amt_Field_ID__c</fullName>
        <label>Recurring Payment Initial Amt Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Initial_Fixed_Amount__c</fullName>
        <label>Recurring Payment Initial Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Recurring_Payment_Interval__c</fullName>
        <label>Recurring Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Retry_Recurring_Payment_After_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Recurring Payment After Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Shipping_Field_ID__c</fullName>
        <label>Shipping Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Shipping_Field_Type__c</fullName>
        <label>Shipping Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Shipping_Fixed_Amount__c</fullName>
        <label>Shipping Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Shipping_Formula2__c</fullName>
        <label>Shipping Formula2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Shipping_Formula__c</fullName>
        <label>Shipping Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Default_Formula2__c</fullName>
        <label>Subtotal Amount Default Formula2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Default_Formula__c</fullName>
        <label>Subtotal Amount Default Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Field_Type__c</fullName>
        <label>Subtotal Amount Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Formula2__c</fullName>
        <label>Subtotal Amount Formula2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Formula_Type__c</fullName>
        <label>Subtotal Amount Formula Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Formula__c</fullName>
        <label>Subtotal Amount Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount_Mapping_XML__c</fullName>
        <label>Subtotal Amount Mapping XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Amount__c</fullName>
        <label>Subtotal Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Base_Amount__c</fullName>
        <label>Subtotal Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subtotal_Field_ID__c</fullName>
        <label>Subtotal Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_BCC__c</fullName>
        <label>Success Email BCC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_Body__c</fullName>
        <label>Success Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_CC__c</fullName>
        <label>Success Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_Subject__c</fullName>
        <label>Success Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_To_Field_ID__c</fullName>
        <label>Success Email To Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email_To__c</fullName>
        <label>Success Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Success_Email__c</fullName>
        <label>Success Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Taxes_Field_ID__c</fullName>
        <label>Taxes Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Taxes_Field_Type__c</fullName>
        <label>Taxes Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                    <default>true</default>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Taxes_Fixed_Percentage__c</fullName>
        <label>Taxes Fixed Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Taxes_Formula2__c</fullName>
        <label>Taxes Formula2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Taxes_Formula__c</fullName>
        <label>Taxes Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Transaction_Amount_Mapping_Field_ID__c</fullName>
        <label>Transaction Amount Mapping Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Transaction_ID_Mapping_Field_ID__c</fullName>
        <label>Transaction ID Mapping Field ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Visa_Accepted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visa Accepted</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Field</label>
    <listViews>
        <fullName>Nolan_Daigle_Payment_Field</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FFPF-{00000}</displayFormat>
        <label>Payment Field ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>